# alcura-ai

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
alcura/: hooks.py
alcura/alcura/ai_doctype_index/: ai_doctype_index.js  ai_doctype_index.json
alcura/alcura/ai_doctype_index_field/: ai_doctype_index_field.py
alcura/alcura/alcura_ai_chat/: alcura_ai_chat.css  alcura_ai_chat.json
alcura/alcura/alcura_ai_settings/: alcura_ai_settings.js  alcura_ai_settings.json  alcura_ai_settings.py
alcura/alcura/doctype/ai_doctype_index/: ai_doctype_index.js  ai_doctype_index.py
alcura/alcura/doctype/ai_doctype_index_field/: ai_doctype_index_field.json
alcura/api/v1/: chat.py  sample.py  settings.py
alcura/public/css/: alcura.bundle.css
alcura/public/js/: alcura.bundle.js
alcura/services/: analysis_service.py  data_service.py  openai_service.py
alcura/tests/: conftest.py  test_ai_doctype_index.py  test_analysis_service.py  test_chat_api.py  test_data_service.py  test_sample_api.py
alcura_ai/: hooks.py  modules.txt
alcura_ai/api/v1/: chat.py  sample.py  settings.py
alcura_ai/config/: desktop.py  docs.py
alcura_ai/public/css/: alcura_ai.bundle.css
alcura_ai/public/js/: alcura_ai.bundle.js
alcura_ai/services/: analysis_service.py  cache_service.py  data_service.py  openai_service.py  rag_service.py  rate_limiter.py
alcura_ai/tests/: conftest.py  test_analysis_service.py  test_chat_api.py  test_data_service.py  test_rag_service.py  test_sample_api.py
(+13 files in other folders)
