[project]
name = "alcura_ai"
authors = [
	{ name = "Alcura", email = "developers@alcura.com" },
]
description = "Custom Frappe Application"
requires-python = ">=3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = [
	"openai>=1.0",
	"pandas>=2.0",
	"matplotlib>=3.7",
	"numpy>=1.24",
	"qdrant-client>=1.9",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = [
	"F",
	"E",
	"W",
	"I",
	"UP",
	"B",
	"RUF",
]
ignore = [
	"B017",
	"B018",
	"B023",
	"B904",
	"E101",
	"E402",
	"E501",
	"E741",
	"F401",
	"F403",
	"F405",
	"F722",
	"W191",
	"RUF001",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[project.urls]
Homepage = "https://github.com/alcura/alcura"
Repository = "https://github.com/alcura/alcura.git"
"Bug Reports" = "https://github.com/alcura/alcura/issues"
